--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
+  "name": "tiktok-api",
+  "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.10.0",
-    "cheerio": "^1.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.1.0",
-    "express": "^5.1.0"
+    "axios": "^1.6.7"
   }
 }
